--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,16 +55,30 @@ table {
 body {
   font-family: "Roboto", sans-serif;
 }
+body .page-spacing {
+  padding: 0px 15%;
+}
+body .page-btn {
+  text-decoration: none;
+  font-size: 0.8em;
+  font-weight: 500;
+  color: #fff;
+  background-color: #3b82f6;
+  border-radius: 5px;
+  padding: 5px 22px;
+}
 body header {
   background-color: #1c2734;
   color: #fff;
 }
 body header nav {
+  padding-top: 15px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 body header nav #header-logo {
-  font-size: 1.3em;
+  font-size: 1.2em;
   font-weight: 600;
   text-decoration: none;
   color: #fff;
@@ -72,12 +86,43 @@ body header nav #header-logo {
 body header nav #navbar-links {
   display: flex;
   justify-content: space-between;
-  width: 25%;
+  width: 35%;
 }
 body header nav #navbar-links .nav-link {
   text-decoration: none;
   color: #ededed;
   font-weight: 300;
+  font-size: 0.8em;
+}
+body header #header-content {
+  display: flex;
+  justify-content: space-between;
+  height: 50%;
+  padding-bottom: 100px;
+}
+body header #header-content #page-heading {
+  width: 50%;
+}
+body header #header-content #page-heading h1 {
+  font-size: 2em;
+  font-weight: 700;
+  width: 60%;
+  line-height: 1.1em;
+}
+body header #header-content #page-heading p {
+  font-size: 0.85em;
+  font-weight: 200;
+  width: 80%;
+  margin-bottom: 10px;
+}
+body header #header-content #header-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6d747d;
+  font-size: 0.8em;
+  width: 40%;
+  height: 140px;
 }
 body section {
   height: 30vh;
