--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,15 +2,30 @@
 @import "./defaults/colors";
 
 body{
+    .page-spacing{
+        padding: 0px 15%;
+    }
     font-family: "Roboto", sans-serif;
+    .page-btn{
+        text-decoration: none;
+        font-size: .8em;
+        font-weight: 500;
+        color: #fff;
+        background-color: $btn-color;
+        border-radius: 5px;
+        padding: 5px 22px;
+    }
     header{
+
         background-color: $primary-color;
         color: #fff;
         nav{
+            padding-top: 15px;
             display: flex;
             justify-content: space-between;
+            margin-bottom: 100px;
             #header-logo{
-                font-size: 1.3em;
+                font-size: 1.2em;
                 font-weight: 600;
                 text-decoration: none;
                 color: #fff;
@@ -18,12 +33,43 @@ body{
             #navbar-links{
                 display: flex;
                 justify-content: space-between;
-                width: 25%;
+                width: 35%;
                 .nav-link{
                     text-decoration: none;
                     color: #ededed;
                     font-weight: 300;
+                    font-size: .8em;
                 }
+            }
+        }
+        #header-content{
+            display: flex;
+            justify-content: space-between;
+            height: 50%;
+            padding-bottom: 100px;
+            #page-heading{
+                width: 50%;
+                h1{
+                    font-size: 2em;
+                    font-weight: 700;
+                    width: 60%;
+                    line-height: 1.1em;
+                }
+                p{
+                    font-size: .85em;
+                    font-weight: 200;
+                    width: 80%;
+                    margin-bottom: 10px;
+                }
+            }
+            #header-img{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #6d747d;
+                font-size: .8em;
+                width: 40%;
+                height: 140px;
             }
         }
     }
