--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,10 +55,16 @@ table {
 body {
   font-family: "Roboto", sans-serif;
 }
-body .page-spacing {
+
+section {
+  height: 30vh;
+}
+
+.page-spacing {
   padding: 0px 15%;
 }
-body .page-btn {
+
+.page-btn {
   text-decoration: none;
   font-size: 0.8em;
   font-weight: 500;
@@ -67,63 +73,110 @@ body .page-btn {
   border-radius: 5px;
   padding: 5px 22px;
 }
-body header {
+
+header {
   background-color: #1c2734;
   color: #fff;
 }
-body header nav {
+header nav {
   padding-top: 15px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 100px;
 }
-body header nav #header-logo {
+header nav #header-logo {
   font-size: 1.2em;
   font-weight: 600;
   text-decoration: none;
   color: #fff;
 }
-body header nav #navbar-links {
+header nav #navbar-links {
   display: flex;
   justify-content: space-between;
-  width: 35%;
+  width: 30%;
 }
-body header nav #navbar-links .nav-link {
+header nav #navbar-links .nav-link {
   text-decoration: none;
   color: #ededed;
   font-weight: 300;
   font-size: 0.8em;
 }
-body header #header-content {
+header #header-content {
   display: flex;
   justify-content: space-between;
   height: 50%;
   padding-bottom: 100px;
 }
-body header #header-content #page-heading {
+header #header-content #page-heading {
   width: 50%;
 }
-body header #header-content #page-heading h1 {
+header #header-content #page-heading h1 {
   font-size: 2em;
   font-weight: 700;
   width: 60%;
   line-height: 1.1em;
 }
-body header #header-content #page-heading p {
+header #header-content #page-heading p {
+  color: rgba(255, 255, 255, 0.786);
   font-size: 0.85em;
-  font-weight: 200;
+  font-weight: 300;
   width: 80%;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
-body header #header-content #header-img {
+header #header-content #header-img {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #6d747d;
   font-size: 0.8em;
-  width: 40%;
-  height: 140px;
+  width: 35%;
+  height: 150px;
 }
-body section {
-  height: 30vh;
+
+#randominfo-section {
+  padding-bottom: 60px;
+}
+#randominfo-section h2 {
+  text-align: center;
+  font-size: 1.7em;
+  font-weight: 700;
+  margin: 40px 0px;
+}
+#randominfo-section #box-wrapper {
+  padding: 0px 20%;
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+}
+#randominfo-section #box-wrapper .box-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#randominfo-section #box-wrapper .box-item p {
+  margin-top: 5px;
+  color: rgb(87, 87, 87);
+  text-align: center;
+  font-size: 0.8em;
+  font-weight: 300;
+  width: 95%;
+}
+#randominfo-section #box-wrapper .box-item .small-box {
+  width: 120px;
+  height: 120px;
+  border: 3px #3b82f6 solid;
+  border-radius: 12px;
+}
+
+#quote-section {
+  background-color: #e5e7eb;
+}
+#quote-section #quote-block {
+  padding: 100px 400px;
+  display: flex;
+  flex-direction: column;
+}
+#quote-section #quote-block p {
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
