--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,7 +57,7 @@ body {
 }
 
 section {
-  height: 30vh;
+  height: 320px;
 }
 
 .page-spacing {
@@ -133,9 +133,6 @@ header #header-content #header-img {
   height: 150px;
 }
 
-#randominfo-section {
-  padding-bottom: 60px;
-}
 #randominfo-section h2 {
   text-align: center;
   font-size: 1.7em;
@@ -146,7 +143,7 @@ header #header-content #header-img {
   padding: 0px 20%;
   display: flex;
   justify-content: center;
-  gap: 25px;
+  gap: 30px;
 }
 #randominfo-section #box-wrapper .box-item {
   display: flex;
@@ -170,13 +167,68 @@ header #header-content #header-img {
 }
 
 #quote-section {
+  padding: 70px 0px;
+  padding-bottom: 10px;
+  height: 200px;
   background-color: #e5e7eb;
 }
 #quote-section #quote-block {
-  padding: 100px 400px;
   display: flex;
   flex-direction: column;
+  margin: 0px 25%;
 }
-#quote-section #quote-block p {
+#quote-section #quote-block #main-quote {
+  font-size: 1.5em;
+  font-weight: 300;
+  margin-bottom: 20px;
+  font-style: italic;
+  line-height: 1.3em;
+  height: 50%;
+}
+#quote-section #quote-block #quote-author {
+  font-size: 1.1em;
+  font-weight: 500;
+  align-self: flex-end;
+}
+
+#cta-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#cta-section #cta-block {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #3b82f6;
   width: 100%;
+  height: 40%;
+  border-radius: 12px;
+}
+#cta-section #cta-block #cta-main-content {
+  color: #fff;
+}
+#cta-section #cta-block #cta-main-content h3 {
+  font-weight: 500;
+  font-size: 1.2em;
+  padding-bottom: 5px;
+}
+#cta-section #cta-block #cta-main-content #cta-subtext {
+  font-weight: 200;
+  font-size: 0.8em;
+}
+#cta-section #cta-block #cta-btn {
+  border: 1px white solid;
+}
+
+footer {
+  height: 60px;
+  background-color: #1c2734;
+  color: #fff;
+  text-align: center;
+}
+footer p {
+  padding: 30px 0px;
+  font-size: 0.8em;
+  font-weight: 300;
 }/*# sourceMappingURL=styles.css.map */
